fix: update agp version

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,9 +65,13 @@ android {
                 keyAlias System.getenv()["CM_KEY_ALIAS"]
                 keyPassword System.getenv()["CM_KEY_PASSWORD"]
             } else {
+                if (!keystoreProperties.containsKey('storeFile')) {
+                    throw new GradleException('storeFile is missing in key.properties')
+                }
+
                 keyAlias keystoreProperties['keyAlias']
                 keyPassword keystoreProperties['keyPassword']
-                storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+                storeFile file(keystoreProperties['storeFile'])
                 storePassword keystoreProperties['storePassword']
             }
         }
